--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'info.solidsoft.pitest' version '1.9.0'
 }
 
-group 'org.example'
+group 'com.aor.lendea'
 version '1.0-SNAPSHOT'
 
 repositories {
